--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["PreTreat_SagittalScroll.avi"]
+            //"args": ["PreTreat_SagittalScroll.avi"]
         }
     ]
 }
